bin/tests/errors_parser/parser/parser_err_expected_token_fam_before.swg
#global fileprivate

enum  { } // swc-expected-error {{parser_err_expected_token_fam_before}}
